Refactor: set class variables to private, direct references are replaced with getters for safer access